--- a/vScore_Credito/1.Base_de_Dados/Dados.ipynb
+++ b/vScore_Credito/1.Base_de_Dados/Dados.ipynb
@@ -5,9 +5,10 @@
    "id": "82057566",
    "metadata": {},
    "source": [
-    "# Extração dos dados\n",
+    "# Objetivo \n",
     "\n",
-    "Uso da API do Kaggle para listar e baixar o conjunto de dados para o estudo de score de crédito. Particionamento da base em treino, validação e teste."
+    "- Extração dos dados via API do Kaggle para listar e baixar o conjunto de dados para o estudo de score de crédito. \n",
+    "- Os dados serão salvos em formato parquet, em uma primeira \"camada\" considerada bronze."
    ]
   },
   {
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "c7e9642c",
    "metadata": {},
    "outputs": [],
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "91c0c295",
    "metadata": {},
    "outputs": [],
@@ -150,7 +151,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
+   "id": "4062af09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zf = zipfile.ZipFile('credit-score-classification.zip') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a2735df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['test.csv', 'train.csv']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Nomes dos arquivos no zip \n",
+    "\n",
+    "zf.namelist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "7fbb314c",
    "metadata": {},
    "outputs": [
@@ -158,8 +192,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_6697/3711624576.py:2: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  dados = pd.read_csv(zf.open('train.csv'))\n"
+      "/tmp/ipykernel_6721/2985297438.py:1: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  treino = pd.read_csv(zf.open('train.csv'))\n"
      ]
     },
     {
@@ -438,20 +472,19 @@
        "4  341.48923103222177         Good  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "zf = zipfile.ZipFile('credit-score-classification.zip') \n",
-    "dados = pd.read_csv(zf.open('train.csv'))\n",
-    "dados.head()"
+    "treino = pd.read_csv(zf.open('train.csv'))\n",
+    "treino.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "b5337729",
    "metadata": {},
    "outputs": [
@@ -461,18 +494,92 @@
        "(100000, 28)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dados.shape"
+    "treino.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
+   "id": "a135c890",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100000 entries, 0 to 99999\n",
+      "Data columns (total 28 columns):\n",
+      " #   Column                    Non-Null Count   Dtype  \n",
+      "---  ------                    --------------   -----  \n",
+      " 0   ID                        100000 non-null  object \n",
+      " 1   Customer_ID               100000 non-null  object \n",
+      " 2   Month                     100000 non-null  object \n",
+      " 3   Name                      90015 non-null   object \n",
+      " 4   Age                       100000 non-null  object \n",
+      " 5   SSN                       100000 non-null  object \n",
+      " 6   Occupation                100000 non-null  object \n",
+      " 7   Annual_Income             100000 non-null  object \n",
+      " 8   Monthly_Inhand_Salary     84998 non-null   float64\n",
+      " 9   Num_Bank_Accounts         100000 non-null  int64  \n",
+      " 10  Num_Credit_Card           100000 non-null  int64  \n",
+      " 11  Interest_Rate             100000 non-null  int64  \n",
+      " 12  Num_of_Loan               100000 non-null  object \n",
+      " 13  Type_of_Loan              88592 non-null   object \n",
+      " 14  Delay_from_due_date       100000 non-null  int64  \n",
+      " 15  Num_of_Delayed_Payment    92998 non-null   object \n",
+      " 16  Changed_Credit_Limit      100000 non-null  object \n",
+      " 17  Num_Credit_Inquiries      98035 non-null   float64\n",
+      " 18  Credit_Mix                100000 non-null  object \n",
+      " 19  Outstanding_Debt          100000 non-null  object \n",
+      " 20  Credit_Utilization_Ratio  100000 non-null  float64\n",
+      " 21  Credit_History_Age        90970 non-null   object \n",
+      " 22  Payment_of_Min_Amount     100000 non-null  object \n",
+      " 23  Total_EMI_per_month       100000 non-null  float64\n",
+      " 24  Amount_invested_monthly   95521 non-null   object \n",
+      " 25  Payment_Behaviour         100000 non-null  object \n",
+      " 26  Monthly_Balance           98800 non-null   object \n",
+      " 27  Credit_Score              100000 non-null  object \n",
+      "dtypes: float64(4), int64(4), object(20)\n",
+      "memory usage: 21.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "treino.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3bfb6dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converte a coluna Monthly_Balance para string\n",
+    "\n",
+    "treino['Monthly_Balance'] = treino['Monthly_Balance'].astype('str') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "6ad4c115",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# treino[treino['Monthly_Balance'] == '__-333333333333333333333333333__']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "20e2d06a",
    "metadata": {},
    "outputs": [
@@ -746,7 +853,7 @@
        "4   485.2984336755923  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "ad1558e0",
    "metadata": {},
    "outputs": [
@@ -768,13 +875,46 @@
        "(50000, 27)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "teste.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2fba4236",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converte a coluna Monthly_Balance para string\n",
+    "\n",
+    "teste['Monthly_Balance'] = teste['Monthly_Balance'].astype('str') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91f737b2",
+   "metadata": {},
+   "source": [
+    "# Salva os dados - dados bronze\n",
+    "\n",
+    "Salva os dados em formato parquet para, posteriormente, alguns tratamentos e criação de variáveis serem feitos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "3566c0d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "treino.to_parquet('Dados_Bronze/treino.parquet', engine='fastparquet')\n",
+    "teste.to_parquet('Dados_Bronze/teste.parquet', engine='fastparquet')"
    ]
   }
  ],
